crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__error_tests__error_invalid_license.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/error_tests.rs
expression: error_with_source
---
  × invalid value: invalid value for value: InvalidLicense
  │ ^^^^^^^^^^^^^^ unknown term
   ╭─[error_license.yaml:6:12]
 5 │ about:
 6 │   license: InvalidLicense
   ·            ───────┬──────
   ·                   ╰─┤ invalid value for value: InvalidLicense
   ·                     │ ^^^^^^^^^^^^^^ unknown term
 7 │   summary: An example package with an invalid license
   ╰────
