crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__error_tests__error_missing_name.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/error_tests.rs
expression: error_with_source
---
  × missing required field 'name'
   ╭─[missing_name.yaml:2:10]
 1 │     package:
 2 │ ╭─▶   version: 1.0.0
 3 │ ├─▶ 
   · ╰──── missing field 'name'
 4 │     about:
 5 │       license: MIT
   ╰────
