crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__error_tests__error_missing_package.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/error_tests.rs
expression: error_with_source
---
  × missing required field 'package'
   ╭─[missing_package.yaml:1:6]
 1 │ ╭─▶ about:
 2 │ │     homepage: https://example.com
 3 │ │     license: MIT
 4 │ │     summary: A package without a package section
 5 │ │   
 6 │ │   requirements:
 7 │ │     build:
 8 │ ├─▶     - gcc
   · ╰──── missing field 'package'
   ╰────
