crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__error_tests__error_missing_version.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/error_tests.rs
expression: error_with_source
---
  × missing required field 'version'
   ╭─[missing_version.yaml:2:7]
 1 │     package:
 2 │ ╭─▶   name: test-package
 3 │ ├─▶ 
   · ╰──── missing field 'version'
 4 │     about:
 5 │       license: MIT
   ╰────
