crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__error_tests__error_multi_output_staging_with_run_requirements.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/error_tests.rs
expression: error_with_source
---
  × invalid value: invalid value for staging requirements: 'run' is not
  │ allowed in staging requirements
    ╭─[multi_output_staging_with_run.yaml:16:7]
 15 │         - zlib
 16 │       run:
    ·       ─┬─
    ·        ╰── invalid value for staging requirements: 'run' is not allowed in staging requirements
 17 │         - libgcc
    ╰────
  help: staging outputs can only have 'build', 'host', and
        'ignore_run_exports' requirements
